--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.5.0",
     "@nuxtjs/style-resources": "^0.1.1",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap-vue": "^2.0.0-rc.1",
     "chart.js": "^2.7.1",
     "cross-env": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "firebase": "^7.7.0",
     "flag-icon-css": "^2.9.0",
